--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -45,7 +45,9 @@
                     popup: [
                       '#{link_to 'Org', organizations_path, :class => 'new-listing'}',
                       '#{link_to 'User', users_path, :class => 'new-listing'}',
-                      '#{link_to 'Requests', grant_requests_path, :class => 'new-listing'}'
+                      '#{link_to 'Requests', grant_requests_path, :class => 'new-listing'}',
+                      '#{link_to 'Reports', request_reports_path, :class => 'new-listing'}',
+                      '#{link_to 'Transactions', request_transactions_path, :class => 'new-listing'}'
                     ]
                   }
                 ]
