--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -27,19 +27,19 @@
                     label: 'New Org',
                     url: '#{new_organization_path}',
                     className: 'new-detail',
-                    type: 'green small'
+                    type: 'style-ql-documents small'
                   },
                   {
                     label: 'New Person',
                     url: '#{new_user_path}',
                     className: 'new-detail',
-                    type: 'green small'
+                    type: 'style-ql-library small'
                   },
                   {
                     label: 'New Request',
                     url: '#{new_grant_request_path}',
                     className: 'new-detail',
-                    type: 'green small'
+                    type: 'style-ql-user small'
                   }
                 ],
                 [
