Updates to make Fluxx header match Fluxx EF

--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -17,7 +17,7 @@
             header: {
               actions: [
                 '#{link_to current_user.full_name.blank? ? (current_user.email.blank? ? current_user.login : current_user.email) : current_user.full_name, current_user, :class => 'new-detail'}',
-                '#{link_to 'logout', destroy_user_session_path}'
+                '#{link_to 'Logout', destroy_user_session_path}'
               ]
             },
             dock: {
