--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -40,8 +40,14 @@
                     type: 'style-ql-user small'
                   },
                   {
-                    label: 'New Request',
+                    label: 'New Grant Request',
                     url: '#{new_grant_request_path}',
+                    className: 'new-detail',
+                    type: 'style-ql-documents small'
+                  },
+                  {
+                    label: 'New Fip Request',
+                    url: '#{new_fip_request_path}',
                     className: 'new-detail',
                     type: 'style-ql-documents small'
                   }
@@ -56,7 +62,7 @@
                       '#{link_to 'Organizations', organizations_path, :class => 'new-listing'}',
                       '#{link_to 'People', users_path, :class => 'new-listing'}',
                       '#{link_to 'Requests', grant_requests_path, :class => 'new-listing'}',
-                      '#{link_to 'Grants', granted_requests_path, :class => 'new-listing'}',
+                      '#{link_to 'Grants/FIPs', granted_requests_path, :class => 'new-listing'}',
                       '#{link_to 'Reports', request_reports_path, :class => 'new-listing'}',
                       '#{link_to 'Transactions', request_transactions_path, :class => 'new-listing'}'
                     ]
