--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -41,8 +41,12 @@
                   },
                   {
                     label: 'New Request',
-                    url: '#{new_grant_request_path}',
-                    className: 'new-detail',
+                    url: '#',
+                    className: 'noop',
+                    popup: [
+                      '#{link_to 'New Grant Request', new_grant_request_path, :class => 'new-detail'}',
+                      '#{link_to 'New Fip Request', new_fip_request_path, :class => 'new-detail'}'
+                    ],
                     type: 'style-ql-documents small'
                   }
                 ],
@@ -67,8 +71,10 @@
           }
         }
       });
-      jQuery(function($){
-        $('body').fluxxStage();
-      });
+
   %body#fluxx
     Loading Dashboard
+    :javascript
+      $(window).load(function() {
+        $('body').fluxxStage();
+      });
