--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,12 +1,14 @@
 %html
   %head
     %title Grants Dashboard
-    - if Rails.env == 'production' || Rails.env == 'staging'
-      =javascript_include_tag '/fluxx_engine/dist/fluxx.engine.full.min.js'
-    - else
-      =javascript_include_tag '/fluxx_engine/dist/fluxx.engine.full.js'
+    - Dir.glob("#{Rails.root}/public/javascripts/fluxx_engine/lib/*.js").map{|filename| filename.gsub("#{Rails.root}/public", '')}.each do |filename|
+      =javascript_include_tag filename
+    - Dir.glob("#{Rails.root}/public/javascripts/fluxx_engine/src/**/*.js").map{|filename| filename.gsub("#{Rails.root}/public", '')}.each do |filename|
+      =javascript_include_tag filename
     
-    =stylesheet_link_tag '/fluxx_engine/theme/default/css/style.css'
+    =stylesheet_link_tag '/stylesheets/compiled/fluxx_engine/theme/default/style.css'
+    =stylesheet_link_tag '/stylesheets/compiled/fluxx_crm/theme/default/style.css'
+    =stylesheet_link_tag '/stylesheets/compiled/fluxx_grant/theme/default/style.css'
     :javascript
       $.extend(true, {
         fluxx: {
