FLX-73 Changed label to read "Show Card"

--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -57,7 +57,7 @@
                 ],
                 [
                   {
-                    label: 'PLUS',
+                    label: 'Show Card',
                     url: '#',
                     className: 'noop',
                     type: 'plus small',
