FLX-102 Cards are added to stage stacked vertically - resizing browser fixes view.

--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -80,6 +80,6 @@
   %body#fluxx
     Loading Dashboard
     :javascript
-      $(window).load(function() {
+      $(document).ready(function() {
         $('body').fluxxStage();
       });
