--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -53,6 +53,12 @@
                       '#{link_to 'New Grant Request', new_grant_request_path, :class => 'new-detail'}',
                       '#{link_to 'New Fip Request', new_fip_request_path, :class => 'new-detail'}'
                     ]
+                  },
+                  {
+                    label: 'New Project',
+                    url: '#{new_project_path}',
+                    className: 'new-detail',
+                    type: 'style-ql-library small'
                   }
                 ],
                 [
@@ -62,6 +68,7 @@
                     className: 'noop',
                     type: 'plus small',
                     popup: [
+                      '#{link_to 'Projects', projects_path, :class => 'new-listing'}',
                       '#{link_to 'Organizations', organizations_path, :class => 'new-listing'}',
                       '#{link_to 'People', users_path, :class => 'new-listing'}',
                       '#{link_to 'Requests', grant_requests_path, :class => 'new-listing'}',
