--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -58,7 +58,7 @@
                     label: 'New Project',
                     url: '#{new_project_path}',
                     className: 'new-detail',
-                    type: 'style-ql-library small'
+                    type: 'style-ql-project small'
                   }
                 ],
                 [
